changed List method